

Changes since 1.1.0

- Added support for Google Code Search

- Added http logging (see GDataHTTPFetcherLogging.h)

- Added routines to let library users override standard classes
  with their own surrogate subclasses (see GDataServiceBase.h)
  
- Added convenience setters for methods that take GDataTextContruct.
  For example, framework now supports setTitleWithString:.

- Fixed escaping algorithm for query parameter generation.

- Added support for Calendar web content gadget preferences

- Store cookies on redirects (thanks riggle)

- Calendar sample app no longer attempts to set the author value for an event,
  as the author is always the authenticated user
  
- Removed method for retrieving a calendar event feed for a username

- Added ascending order parameter to Query base class

- Added more Calendar query parameters

- Changed addReminders: to addReminder: (thanks riggle)

- Authentication errors are now also returned in the userInfo with the "error"
  key (thanks ghulands)
  
- Add rel constants for GDataWhere (thanks riggle)

- Return proper numeric types in GDataValueConstruct methods (thanks riggle)

- Fixed bugs in finding the proper class to instantiate from a category in XML


Release 1.1.0
4-June-2007
Changes since 1.0.0

- Added photos, media, and geo data classes, and Picasa Web Albums service
  classes

- Interfaces now use proper subclasses of GDataValueConstruct to ensure
  that XML element names are generated from objects created from scratch.  
  
- The XMLElement extension methods may now pass nil as default name to
  their superclass to use the extension's defined default name.
  
- Added ACL feed support, and ACL display and editing in Calendar sample
  
- GDataAtomPubControl convenience creator adds the "app" namespace for the
  element
  
- Fixed some incorrect selector signatures in the Blogger sample

- Changed GDataHTTPFetcher to allow redirects from http to https

- Upload of http data may now be monitored with progress callbacks
